Bug 1525492 - [release 123] Align source header and footer heights to guidelines (#7873). r=dwalsh

--- a/devtools/client/debugger/new/src/components/App.css
+++ b/devtools/client/debugger/new/src/components/App.css
@@ -28,13 +28,9 @@ button:focus {
   display: flex;
   position: relative;
   flex: 1;
-  background-color: var(--theme-tab-toolbar-background);
-  height: calc(100% - 1px);
+  background-color: var(--theme-body-background);
+  height: 100%;
   overflow: hidden;
-}
-
-.theme-dark .editor-pane {
-  background-color: var(--theme-toolbar-background);
 }
 
 .editor-container {
